fixed contrast issues

--- a/public/css/_colours.css
+++ b/public/css/_colours.css
@@ -12,6 +12,8 @@
 
     --color-light-tertiary: #fafafa;
 
+    --color-mid: #e3e3e3;
+
     --color-on: #E18335;
 
     --color-no: #A21309;
